--- a/.github/workflows/run_extractor.yaml
+++ b/.github/workflows/run_extractor.yaml
@@ -126,7 +126,7 @@ jobs:
           path: "${{ GITHUB.WORKSPACE }}/${{ env.API_MANAGEMENT_SERVICE_OUTPUT_FOLDER_PATH }}"
 
       - name: Create artifacts pull request
-        uses: verlindb/visug-apim-demo
+        uses: verlindb/visug-apim-demo@v1
         env:
           API_MANAGEMENT_SERVICE_OUTPUT_FOLDER_PATH: apimartifacts  # change this to the artifacts folder          
         with:
