--- a/.github/workflows/run-publisher-with-env.yaml
+++ b/.github/workflows/run-publisher-with-env.yaml
@@ -17,7 +17,7 @@ on:
         type: string
 
 env:
-  apiops_release_version: desired-version-goes-here
+  apiops_release_version: v4.10.2
   #By default, this will be Information but if you want something different you will need to add a variable in the Settings -> Environment -> Environment variables section
   Logging__LogLevel__Default: ${{ vars.LOG_LEVEL }}
 
