--- a/.github/workflows/run-publisher.yaml
+++ b/.github/workflows/run-publisher.yaml
@@ -29,7 +29,17 @@ jobs:
           echo "::set-output name=commit_id::${{ github.sha }}"
     outputs:
       commit_id: ${{ steps.commit.outputs.commit_id }}
+
   #Publish with Commit ID
+  Push-Changes-To-APIM-Dev-With-Commit-ID:
+    if: (github.event.inputs.COMMIT_ID_CHOICE == 'publish-artifacts-in-last-commit' || github.event.inputs.COMMIT_ID_CHOICE == '')
+    needs: get-commit
+    uses: ./.github/workflows/run-publisher-with-env.yaml
+    with:
+      API_MANAGEMENT_ENVIRONMENT: dev # change this to match the dev environment created in settings
+      COMMIT_ID: ${{ needs.get-commit.outputs.commit_id }}
+      API_MANAGEMENT_SERVICE_OUTPUT_FOLDER_PATH: apimartifacts # change this to the artifacts folder
+    secrets: inherit
 
   #Publish without Commit ID. Publishes all artifacts that reside in the artifacts forlder
   Push-Changes-To-APIM-Dev-Without-Commit-ID:
